# zuul-stats-client

./: .gitreview  .zuul.yaml  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
zuul_stats_client/: __main__.py  main.py  old.py  pipeline.py  tenants.py  utils.py
zuul_stats_client/tests/: test_utils.py
zuul_stats_client/tests/samples/: sampledata.json
