[metadata]
name = zuul_stats_client
summary = 'Zuul stats client'
description-file =
    README.rst
author = Javier Peña
author-email = jpena@redhat.com
home-page = http://www.softwarefactory-project.io/
classifier =
    Development Status :: 3 - Alpha'
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Intended Audience :: Developers
    Environment :: Console

[files]
packages =
    zuul_stats_client

[entry_points]
console_scripts =
    zuul-stats-client = zuul_stats_client.main:main

zuul_stats.client =
    old-jobs = zuul_stats_client.old:OldJobs
    pipeline-list = zuul_stats_client.pipeline:PipelineList
    pipeline-detail = zuul_stats_client.pipeline:PipelineDetail
